updated docker container and changed compose to point to php:7.3 image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         build:
             context: ./docker/app
             dockerfile: Dockerfile
-        image: norrisdan/php:latest
+        image: norrisdan/php:7.3
         networks:
             - net
         volumes:
