updated example config

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Flicks
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,8 +11,8 @@ DB_HOST=db
 DB_PORT=3306
 DB_ROOT_PASSWORD=
 DB_DATABASE=homestead
-DB_USERNAME=
-DB_PASSWORD=
+DB_USERNAME= # create a new one by creating a bash session in the docker container or use the test username -- homestead
+DB_PASSWORD= # as above or use test pass -- secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -25,12 +25,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.googlemail.com
-MAIL_PORT=465
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_HOST=smtp.googlemail.com # this needs to change depending on your email provider
+MAIL_PORT=465 # this depends on your email provider
+MAIL_USERNAME= # you need to provide your email username
+MAIL_PASSWORD= # you need to provide your password
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=
+MAIL_FROM_ADDRESS= # and sender email
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
